--- a/index.html
+++ b/index.html
@@ -1,24 +1,62 @@
 <!doctype html>
 <html lang="pt-br">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="node_modules/bootstrap/compiler/bootstrap.css">
+<head>
+  <title>Curso de Bootstrap 4</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="node_modules/bootstrap/compiler/bootstrap.css">
+  <link rel="stylesheet" href="node_modules/bootstrap/compiler/styles.css">
+</head>
 
-    <title>Curso de Bootstrap 4</title>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-dark bg-gradient-primary">
+    <div class="container">
+      <a href="#" class="navbar-brand h1 mb-0">Curso</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSite">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSite">
+        <ul class="navebar-nav mr-auto">
+          <li class="nave-iten">
+            <a href="#" class="nave-link">Início</a>
+          </li>
+          <li class="nave-iten">
+            <a href="#" class="nave-link">Perfil</a>
+          </li>
+          <li class="nave-iten">
+            <a href="#" class="nave-link">Serviços</a>
+          </li>
+          <li class="nave-iten">
+            <a href="#" class="nave-link">Depoimentos</a>
+          </li>
+          <li class="nave-iten">
+            <a href="#" class="nave-link">Contatos</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-iten dropdown">
+            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="navDrop">
+              Social
+            </a>
+            <div class="dropdown-menu">
+              <a href="#" class="dropdown-iten">Facebook</a>
+              <a href="#" class="dropdown-iten">Twitter</a>
+              <a href="#" class="dropdown-iten">Instagram</a>
+            </div>
+          </li>
+        </ul>
+        <form class="form-inline">
+          <input type="search" class="form-control ml-2 mr-2" placeholder="Buscar...">
+          <button class="btn btn-dark" type="submit">Ok</button>
+        </form>
+      </div>
+    </div>
+  </nav>
 
-    <a href="#" class="btn btn-primary">Teste de botão</a>
-    
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="node_modules/jquery/dist/jquery.js"></script>
-    <script src="node_modules/popper.js/dist/popper.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
-  </body>
+  <script src="node_modules/jquery/dist/jquery.js"></script>
+  <script src="node_modules/popper.js/dist/umd/popper.js"></script>
+  <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
+</body>
+
 </html>
