--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   <div class="container">
     <div class="row">
       <div class="col-12 text-center my-5">
-        <h1 class="display-3">É um fato conhecido</h1>
+        <h1 class="display-3"><i class="fa fa-cogs text-primary"></i>É um fato conhecido</h1>
         <p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível</p>
       </div>
     </div>
@@ -127,7 +127,8 @@
         </nav>
       </div>
       <div class="col-sm-6 col-md-8">
-        <div data-spy="scroll" data-target="#navbarVertical" data-offset="0" class="scrollspySite">
+        <div data-spy="scroll" data-target="#navbarVertical" data-offset="0"
+          style="position: relative; overflow: auto; height: 345px;">
           <h4 id="item1">sobreviveu não só</h4>
           <p>
             e tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco
@@ -236,7 +237,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12 text-center">
-          <h1 class="display-4">Letraset lançou</h1>
+          <h1 class="display-4"><i class="fa fa-video-camera text-primary"></i>Letraset lançou</h1>
           <p class="lead">
             bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a
             cinco
@@ -316,6 +317,114 @@
       </div>
     </div>
   </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-12 text-center my-4">
+        <h1 class="display-4"><i class="fa fa-paper-plane text-primary" aria-hidden="true"></i> asjdnsadas as sadad</h1>
+      </div>
+    </div>
+    <div class="row justify-content-center mb-5">
+      <div class="col-sm-12 col-md-10 col-lg-8">
+        <form>
+          <div class="form-row">
+            <div class="form-group col-sm-6">
+              <label for="inputNome">Nome</label>
+              <input type="text" class="form-control" id="inputNome" placeholder="">
+            </div>
+            <div class="form-group col-sm-6">
+              <label for="inputSobrenome">Sobrenome</label>
+              <input type="text" class="form-control" id="inputSobrenome" placeholder="Sobrenome">
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-sm-12">
+              <label for="inputEnd">Endereço</label>
+              <input type="text" class="form-control" id="inputEnd" placeholder="End">
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-sm-6">
+              <label for="inputCidade">Cidade</label>
+              <input type="text" class="form-control" id="inputCidade" placeholder="Cidade">
+            </div>
+            <div class="form-group col-sm-4">
+              <label for="inputEst">Estado</label>
+              <select id="inputEst" class="form-control">
+                <option selected>Escolha...</option>
+                <option>...</option>
+                <option>...</option>
+                <option>...</option>
+              </select>
+            </div>
+            <div class="form-group col-sm-2">
+              <label for="inputCEP">CEP</label>
+              <input type="text" class="form-control" id="inputCEP" placeholder="CEP">
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-sm-12">
+              <div class="form-check">
+                <label class="form-check-label">
+                  <input type="checkbox" class="form-check-input">Desejo receber novidades por E-mail
+                </label>
+              </div>
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="col-sm-12">
+              <button type="submit" class="btn btn-primary">Enviar</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12 mb-3">
+        <hr>
+      </div>
+      <div class="col-sm-4">
+        <h3>Curso</h3>
+        <p>
+          scrambled it to make a type specimen book. It has survived not only five centuries, but also the of Letraset
+          sheets containing Lorem Ipsum passages, and more recently wit
+        </p>
+        <p>
+          rs, as opposed to using 'Content here, content here', making it look like readable English. Many desktop
+          publishing packages and web page editors now use Lorem Ipsum as their default model text, and a
+        </p>
+      </div>
+      <div class="col-sm-4">
+        <h3>Menu</h3>
+        <div class="list-group text-center">
+          <a href="#" class="list-group-item list-group-item-action list-group-item-primary">Perfil</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-primary">Serviços</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-primary">Depoimentos</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-primary">Contatos</a>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <h3>Social</h3>
+        <div class="btn-group-vertical btn-block btn-group-lg" role="group">
+          <a href="#" class="btn btn-outline-primary"><i class="fa fa-facebook-official"
+              arial-hidden="true"></i>Facebook</a>
+          <a href="#" class="btn btn-outline-info"><i class="fa fa-twitter-square" arial-hidden="true"></i>Twitter</a>
+          <a href="#" class="btn btn-outline-warning"><i class="fa fa-instagran" arial-hidden="true"></i>Instagram</a>
+        </div>
+      </div>
+      <div class="col-12 mt-5">
+        <blockquote class="blockquote text-center">
+          <p class="mb-0">
+            O sucesso não é garantido, mas o fracasso é certo se você não estiver emocionalmente envilvido em seu
+            trabalho.
+          </p>
+          <footer class="blockquote-footer">
+            Biz Stone
+            <cite title="Titulo">Fundador do twitter</cite>
+          </footer>
+        </blockquote>
+      </div>
+    </div>
+  </div>
   <!-- Modal -->
   <div class="modal fade" id="siteModal" tabindex="-1" role="dialog">
     <div class="modal-dialog modal-lg" role="document">
@@ -364,5 +473,5 @@
 </html>
 
 <!-- 
-  sass --watch node_modules/bootstrap/scss:node_modules/bootstrap/compiler node_modules/font-awesome/scss:node_modules/font-awesome/css style/scss:style/css
+  sass --watch node_modules/bootstrap/scss:node_modules/bootstrap/compiler node_modules/font-awesome/scss:node_modules/font-awesome/css
  -->
